# schools-in-singapore

./: .env  .gitignore  Pipfile  README.md  README.org  api.org  conftest.py  docker-compose.yml  general-information-of-schools.csv  manage.py  notes.org  package-lock.json  package.json  pyproject.toml  pytest.ini
app/: initialize.jsx
schools/: admin.py  documents.py  models.py  serializers.py  tests.py  views.py
schools/management/commands/: import.py
schools/migrations/: 0001_initial.py  0002_auto_20180421_1425.py
singapore_schools/: mixins.py  settings.py  urls.py  wsgi.py
templates/: index.html
