[tool.poetry]
name = "schools-in-singapore"
version = "0.1.0"
description = ""
authors = ["Tung Dao <me@tungdao.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2.6"
psycopg2 = "^2.8.3"
djangorestframework = "^3.10.3"
django-elasticsearch-dsl = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
pytest-docker-compose = "^3.1.2"
pytest-django = "^3.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
